--- a/Aulas/AULA - 12ex/modelo/modelo.html
+++ b/Aulas/AULA - 12ex/modelo/modelo.html
@@ -12,10 +12,7 @@
     </header>
     <section>
         <div>
-            Amor, eu sou muito retardada né?<br>
-            Kkkkkkk<br>
-            Eu te amo muito meu bem...<br>
-            Espero que vc esteja feliz com seu celular :)
+            Olá, esse é o modelo para os exercícios 14 e 15.
         </div>
         <div>
             Até que ficou bonitinho o jeitinho do site...
