--- a/Aulas/AULA - 14ex/ex017/principal.html
+++ b/Aulas/AULA - 14ex/ex017/principal.html
@@ -12,8 +12,9 @@
     </header>
     <section>
         <div>
-            Número: <input type="number" name="txtnum" id="txtnum">
+            <p>Número: <input type="number" name="txtnum" id="txtnum">
             <input type="button" value="Calcular" onclick="calcular()">
+            </p>
         </div>
         <div id = res>
             <select name="tabuada" id="seltab" size = 10>
